# Toyhou.se-API

./: .breakpoints  Requests.py  index.html  main.py  pyproject.toml
Template/: index.html  style.css
Template/Assets/Favicons/: browserconfig.xml  site.webmanifest
Templates/: index.html  style.css
