[tool.poetry]
name = "toyhouse-api"
version = "0.1.0"
description = ""
authors = ["Novanity <IntenseMode44@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
requests = "^2.26.0"
beautifulsoup4 = "^4.10.0"
lxml = "^4.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
